--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -76,43 +76,21 @@
         <!-- For example columns with settings: -->
         <div class="row">
 			<div class="col s6 input-field">
-                <input type="text" class="value" id="ipaddress" />
-                <label for="ipaddress">DMXface IP address</label>
+                <input type="url" class="value" id="url" />
+                <label for="url">Firenet URL</label>
             </div>
 			
 			<div class="col s6 input-field">
-                <input type="text" class="value" id="port" />
-                <label for="port">Communication port</label>
+                <input type="email" class="value" id="email" />
+                <label for="email">Communication port</label>
             </div>
 			
 			<div class="col s6 input-field">
-                <input type="text" class="value" id="lastdmxchannel" />
-                <label for="lastdmxchannel">Last DMX channel used</label>
+                <input type="password" class="value" id="password" />
+                <label for="password">Last DMX channel used</label>
             </div>
 			
-			<div class="col s6 input-field">
-                <input type="text" class="value" id="requesttiming" />
-                <label for="requesttiming">Request timing power, runtime and additional channels (ms)</label>
-            </div>
-			
-			<div class="col s6 input-field">
-                <input type="text" class="value" id="addchannels" />
-                <label for="addchannels">Additional channel requests (e.g. IN1,IN7,BUS5,DMX100)</label>
-            </div>
-			
-			<div class="col s6 input-field">
-                <input type="text" class="value" id="pwrequestlist" />
-                <label for="pwrequestlist">Runtime / power tracking (e.g. OUT1(500),IN1(125),DMX10(1000))</label>
-            </div>
 		
-			<div class="col s6 input-field">
-                <input type="checkbox" class="value" id="minmaxtracking" />
-                <label for="minmaxtracking">Enable the tracking of min/max values for additional channels</label>
-            </div>	
-			<div class="col s6 input-field">
-                <input type="checkbox" class="value" id="extlogging" />
-                <label for="extlogging">Extended logging info (get more info into the LOG)</label>
-            </div>
 
         </div>
 
