--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -82,12 +82,12 @@
 			
 			<div class="col s6 input-field">
                 <input type="email" class="value" id="email" />
-                <label for="email">Communication port</label>
+                <label for="email">E-Mail Adresse</label>
             </div>
 			
 			<div class="col s6 input-field">
                 <input type="password" class="value" id="password" />
-                <label for="password">Last DMX channel used</label>
+                <label for="password">Passwort</label>
             </div>
 			
 		
