--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -90,6 +90,15 @@
                 <label for="password">Passwort</label>
             </div>
 			
+			<div class="col s6 input-field">
+				<input type="text" class="value" id="mystoveid" />
+				<label for="mystoveid" class="translate">mystoveid</label>
+			</div>
+
+			<div class="col s6 input-field">
+				<input type="text" class="value" id="myinterval" />
+				<label for="myinterval" class="translate">myinterval</label>
+			</div>	
 		
 
         </div>
